<resources>
    <string name="app_name">Steps Tracker</string>
    <string name="skip">Skip</string>
    <string name="continues">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trackfit_your_ultimate_step_counter_amp_tracker"><![CDATA[TrackFit - Your Ultimate Step Counter & Tracker]]></string>
    <string name="track_your_steps_monitor_your_progress_live_route_tracking_insightful_reports_and_detailed_history_and_achieve_your_fitness_goals">Track your steps, monitor your progress, live route tracking, insightful reports, and detailed history, and achieve your fitness goals.</string>
    <string name="experience_the_thrill_of_tracking_your_steps_in_real_time_with_trackfit_s_live_maps_trackfit_keeps_you_connected_to_your_journey">Experience the thrill, of tracking your steps in real-time with TrackFit\'s live maps. TrackFit keeps you connected to your journey.</string>
    <string name="discover_your_route_with_live_maps">Discover Your Route with Live Maps</string>
    <string name="intro3body">Stay informed about your step count, distance traveled, and caloris burned with TrackFit\'s comprehensive reports.</string>
    <string name="intro3title">Gain Step Insights with Detailed Reports</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="let_s_dive_into_your_account">Let\'s dive into your account</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="join_trackfit_today">Join TrackFit Today</string>
    <string name="create_your_account_and_start_tracking_your_steps">Create your account and start tracking your steps.</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions.]]></string>
    <string name="i_agree_to_trackfit">I agree to TrackFit</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_your_account_and_start_tracking_your_steps">Login your account and start tracking your steps.</string>
    <string name="create_you_account">Create you account?</string>
    <string name="select_your">Select Your</string>
    <string name="man">Man</string>
    <string name="female">Female</string>
    <string name="do_you_live_a">Do You Live a</string>
    <string name="sedentary">Sedentary</string>
    <string name="lifestyle">Lifestyle?</string>
    <string name="tell_us_about_your_daily_routine">Tell us about your daily routine.</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="how">How</string>
    <string name="old">Old</string>
    <string name="_1_6">1 / 6</string>
    <string name="number_picker_formatter" />

    <!--Font-->
    <string name="selected_text">sans-serif-medium</string>
    <string name="unselected_text">sans-serif-condensed</string>
    <string name="years">years</string>
    <string name="height">Height</string>
    <string name="questionmark">\?</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="lbs">lbs</string>
    <string name="ft">ft</string>
    <string name="weight">Weight</string>
    <string name="share_your_weight_with_us">Share your weight with us.</string>
    <string name="choose_your_daily_step_goal_to_stay_motivated">Choose your daily step goal to stay motivated!</string>
    <string name="steps">steps</string>
    <string name="previous">Previous</string>
    <string name="male">Male</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="cancel">Cancel</string>
    <string name="physical_dialog_body">TrackFit needs permission to access your physical activity data to accurately count your steps and monitor your progress.</string>
    <string name="physical_dialog_title">Physical Activity Permission Request</string>
    <string name="location_dialog_tilte">Location Access Permission Request</string>
    <string name="location_dialog_body">To track your routes and provide you with detailed route mapping. TrackFit requires access to your location.</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="track">Track</string>
    <string name="report">Report</string>
    <string name="history">History</string>
    <string name="upgrade_plan_now">Upgrade Plan Now!</string>
    <string name="enjoy_all_the_benefits_and_explore_more_possibilities">Enjoy all the benefits and explore more possibilities</string>
    <string name="level_9">Level 9</string>
    <string name="you_are_a_rising_star_keep_going">You are a rising star! Keep going!</string>
    <string name="water_tracker">Water Tracker</string>
    <string name="weight_tracker">Weight Tracker</string>
    <string name="preferences">Preferences</string>
    <string name="personal_info">Personal Info</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="billing_amp_subscriptions"><![CDATA[Billing & Subscriptions]]></string>
    <string name="account_amp_security"><![CDATA[Account & Security]]></string>
    <string name="choose_payment_methods">Choose Payment Methods</string>
    <string name="upgrade_plan">Upgrade Plan</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="continue_4_99">Continue - $4.99</string>
    <string name="continue_49_99">Continue - $49.99</string>

</resources>