<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.fragment.userDetail.SedentaryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_live_a"
            android:textColor="@color/titleTextColor"
            android:fontFamily="@font/apompadour_bold_sample"
            android:textSize="@dimen/_25sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sedentary"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/app_color"
            android:fontFamily="@font/apompadour_bold_sample"
            android:textSize="@dimen/_25sdp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lifestyle"
        android:layout_marginStart="@dimen/_10sdp"
        android:textColor="@color/titleTextColor"
        android:layout_gravity="center"
        android:fontFamily="@font/apompadour_bold_sample"
        android:textSize="@dimen/_25sdp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tell_us_about_your_daily_routine"
        android:textColor="@color/bodyTextColor"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"/>


    <ImageView
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_210sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/img_seden"/>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_15sdp"
        android:gravity="center">

            <Button
                android:id="@+id/btNo"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                android:text="@string/no"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/black"
                android:backgroundTint="@color/lightest_app_color"
                android:fontFamily="@font/apompadour_text_sample"/>


        <View
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btYes"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_65sdp"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/black"
            android:text="@string/yes"
            android:backgroundTint="@color/lightest_app_color"
            android:fontFamily="@font/apompadour_text_sample"/>

    </LinearLayout>

</LinearLayout>