<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_15sdp"
    tools:context=".view.activity.auth.LoginSelectionActivity">

    <ImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_gravity="center"
        android:rotation="350"
        android:src="@drawable/ic_footsteps"
        app:tint="@color/app_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/apompadour_bold_sample"
        android:text="@string/let_s_get_started"
        android:textColor="@color/titleTextColor"
        android:textSize="@dimen/_20ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/apompadour_text_sample"
        android:text="@string/let_s_dive_into_your_account"
        android:textColor="@color/bodyTextColor"
        android:textSize="@dimen/_11ssp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/_30sdp"
        app:cardElevation="@dimen/_1sdp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="start|center"
                android:layout_marginStart="@dimen/_5sdp"
                android:src="@drawable/ic_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/continue_with_google"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvApple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/white"
        app:cardElevation="@dimen/_1sdp"
        app:cardCornerRadius="@dimen/_30sdp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="start|center"
                android:layout_marginStart="@dimen/_5sdp"
                android:src="@drawable/ic_apple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/continue_with_apple"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/white"
        app:cardElevation="@dimen/_1sdp"
        app:cardCornerRadius="@dimen/_30sdp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="start|center"
                android:layout_marginStart="@dimen/_5sdp"
                android:src="@drawable/ic_facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/continue_with_facebook"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTwitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/white"
        app:cardElevation="@dimen/_1sdp"
        app:cardCornerRadius="@dimen/_30sdp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="start|center"
                android:layout_marginStart="@dimen/_5sdp"
                android:src="@drawable/ic_twitter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Continue with Twitter"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="@color/app_color"
        android:fontFamily="@font/apompadour_bold_sample"
        android:paddingVertical="@dimen/_13sdp"
        android:text="@string/sign_up"
        android:textColor="@color/lightest_app_color"
        android:textSize="@dimen/_14ssp" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:backgroundTint="@color/lightest_app_color"
        android:fontFamily="@font/apompadour_bold_sample"
        android:paddingVertical="@dimen/_13sdp"
        android:text="@string/login"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_14ssp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   |   "
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_service" />

    </LinearLayout>

</LinearLayout>