<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_grey"
    tools:context=".view.activity.PlansActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_gravity="center|start"/>

        <TextView
            android:id="@+id/titleFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade_plan"
            android:textColor="@color/titleTextColor"
            android:layout_gravity="center"
            android:textSize="@dimen/_17ssp"
            android:fontFamily="@font/apompadour_bold_sample"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvMonthly"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/monthly"
            android:background="@drawable/bn_purple_item"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/apompadour_bold_sample"
            android:layout_height="@dimen/_30sdp"/>

        <TextView
            android:id="@+id/tvYearly"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/yearly"
            android:background="@drawable/bn_item"
            android:gravity="center"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/apompadour_bold_sample"
            android:layout_height="@dimen/_30sdp"/>


    </LinearLayout>

</LinearLayout>