<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.fragment.userDetail.GoalsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What's Your"
            android:textColor="@color/titleTextColor"
            android:fontFamily="@font/apompadour_bold_sample"
            android:textSize="@dimen/_25sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_marginStart="@dimen/_5sdp"
            android:textColor="@color/app_color"
            android:fontFamily="@font/apompadour_bold_sample"
            android:textSize="@dimen/_25sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionmark"
            android:textColor="@color/titleTextColor"
            android:fontFamily="@font/apompadour_bold_sample"
            android:textSize="@dimen/_25sdp"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Share your weight with us."
        android:textColor="@color/bodyTextColor"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp">

        <Button
            android:id="@+id/btKg"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:fontFamily="@font/apompadour_text_sample"
            android:textSize="@dimen/_14ssp"
            android:backgroundTint="@color/app_color"/>

        <View
            android:layout_width="@dimen/_20sdp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btLbs"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="wrap_content"
            android:text="@string/lbs"
            android:textColor="@color/black"
            android:fontFamily="@font/apompadour_text_sample"
            android:textSize="@dimen/_14ssp"
            android:backgroundTint="@color/white"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llKg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="visible"
            android:layout_marginTop="@dimen/_15sdp">

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/npKg"
                android:layout_width="@dimen/_125sdp"
                android:layout_height="@dimen/_400sdp"
                app:np_width="64dp"
                app:np_height="@dimen/_160sdp"
                app:np_dividerColor="@color/app_color"
                app:np_max="300"
                app:np_min="10"
                app:np_dividerDistance="@dimen/_55sdp"
                android:layout_gravity="center"
                app:np_selectedTextColor="@color/app_color"
                app:np_selectedTextSize="@dimen/_28ssp"
                app:np_textColor="@color/black"
                app:np_textSize="@dimen/_20ssp"
                app:np_wheelItemCount="11"
                app:np_typeface="@string/unselected_text"
                app:np_selectedTypeface="@string/selected_text"
                app:np_value="40"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg"
                android:fontFamily="@font/apompadour_text_sample"
                android:layout_marginStart="-40dp"
                android:textSize="@dimen/_14ssp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llLbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_20sdp">

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/npLbs"
                android:layout_width="@dimen/_125sdp"
                android:layout_height="@dimen/_400sdp"
                app:np_width="64dp"
                app:np_height="@dimen/_160sdp"
                app:np_dividerColor="@color/app_color"
                app:np_max="1500"
                app:np_min="1"
                app:np_dividerDistance="@dimen/_55sdp"
                android:layout_gravity="center"
                app:np_selectedTextColor="@color/app_color"
                app:np_selectedTextSize="@dimen/_28ssp"
                app:np_textColor="@color/black"
                app:np_textSize="@dimen/_20ssp"
                app:np_wheelItemCount="11"
                app:np_typeface="@string/unselected_text"
                app:np_selectedTypeface="@string/selected_text"
                app:np_value="88"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbs"
                android:fontFamily="@font/apompadour_text_sample"
                android:layout_marginStart="-40dp"
                android:textSize="@dimen/_14ssp"/>

        </LinearLayout>

    </FrameLayout>




</LinearLayout>